Fix task info field text alignment on mobile

--- a/frontend/src/pages/taskProgressPage.less
+++ b/frontend/src/pages/taskProgressPage.less
@@ -38,6 +38,14 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+
+      & > :first-child {
+        text-align: left;
+      }
+
+      & > :nth-child(2) {
+        text-align: right;
+      }
     }
 
     &::after {
